tests-integration/tests/roundtrip/invalid/semantic_errors/typecheck/bool_in_arith_comparison/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic_errors/typecheck/bool_in_arith_comparison/bool_in_arith_comparison.essence:2:11:
  |
2 | such that b > 5
  |           ^
Type Error: Boolean variable 'b' used in arithmetic context